@@ -102,6 +102,9 @@ Tests
 Build
 -----
 
+- Python/memmove.c and Python/strerror.c have been removed; both functions are
+  in the C89 standard library.
+
 - Patch #2284: Add -x64 option to rt.bat.
 
 What's New in Python 2.6 alpha 1?
